--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "around-react",
   "version": "0.1.0",
-  "homepage": "https://ilanbrof.github.io/around-react",
+  "homepage": "https://ilanbrof.github.io/react-around-auth",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
