--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "around-react",
+  "name": "react-around-auth",
   "version": "0.1.0",
   "homepage": "https://ilanbrof.github.io/react-around-auth",
   "private": true,
